# shed

./: Cargo.toml  LICENSE  README.md  install.sh  shed.json
.github/workflows/: ci.yml  nix-update.yml  release.yml  scoop-update.yml
docs/: AGENT.md  ARCHITECTURE.md  RELEASE.md
nix/: shed.nix  update.sh
src/: ast.rs  emit.rs  main.rs  parser.rs  prune.rs  tests.rs
src/emit/: bash.rs  fish.rs  pwsh.rs
